k8s/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      runtimeClassName: kata-dragonball
      containers:
        - name: frontend
          image: musiek/frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
          resources:
            requests:
              cpu: "200m"
              memory: "200Mi"
            limits:
              cpu: "400m"
              memory: "400Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app
  labels:
    app: frontend
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4747
      targetPort: 3000
  selector:
    app: frontend
