k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubexecutor
  labels:
    app: kubexecutor
spec:
  type: LoadBalancer
  ports:
    - port: 8080
  selector:
    app: kubexecutor
