k8s/base/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: runner-network-policy
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: runner
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mediator
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app: postgresdb
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mediator
#---
# TODO: allow traffic from traefik load balancer pods
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: mediator-network-policy
#  namespace: app
#spec:
#  podSelector:
#    matchLabels:
#      app: mediator
#  policyTypes:
#    - Ingress
#  ingress:
#    - from:
#        - podSelector:
#            matchLabels:
#              app: frontend
